package tasks.task_3;

public class HardStudy implements Study {
    @Override
    public void study(String typeOfStudent) {
        System.out.println(typeOfStudent + ": сложное обучение");
    }
}
