package tasks.task_3;

public class Schoolboy extends Student {
    public Schoolboy(String typeOfStudent) {
        super(typeOfStudent);
    }
}
