package tasks.task_3;

public interface Study {
    void study(String typeOfStudent);
}
