package tasks.task_3;

public class UniversityStudent extends Student {
    public UniversityStudent(String typeOfStudent) {
        super(typeOfStudent);
    }
}
