@startuml

title __TASK_3's Class Diagram__\n

  namespace tasks.task_3 {
    class tasks.task_3.HardStudy {
        + study()
    }
  }
  

  namespace tasks.task_3 {
    class tasks.task_3.Main {
        {static} + main()
    }
  }
  

  namespace tasks.task_3 {
    class tasks.task_3.Schoolboy {
        + Schoolboy()
    }
  }
  

  namespace tasks.task_3 {
    class tasks.task_3.SimpleStudy {
        + study()
    }
  }
  

  namespace tasks.task_3 {
    class tasks.task_3.Student {
        - typeOfStudent : String
        + Student()
        + setStrategy()
        ~ executeStrategy()
    }
  }
  

  namespace tasks.task_3 {
    interface tasks.task_3.Study {
        {abstract} + study()
    }
  }
  

  namespace tasks.task_3 {
    class tasks.task_3.UniversityStudent {
        + UniversityStudent()
    }
  }
  

  tasks.task_3.HardStudy .up.|> tasks.task_3.Study
  tasks.task_3.Schoolboy -up-|> tasks.task_3.Student
  tasks.task_3.SimpleStudy .up.|> tasks.task_3.Study
  tasks.task_3.Student o-- tasks.task_3.Study : study
  tasks.task_3.UniversityStudent -up-|> tasks.task_3.Student


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
